# QT_QML_GUI_Bank_System

./: .gitattributes  .gitignore  ACCOUNT_ID_CLARIFICATION.md  ACCOUNT_ID_DOCUMENTATION_INDEX.md  ACCOUNT_ID_PRACTICAL_EXAMPLE.md  ACCOUNT_ID_QUICK_REFERENCE.md  ACCOUNT_ID_SYSTEM_EXPLAINED.md  CLI_vs_GUI_COMPARISON.md  CMakeLists.txt  COMPLETION_SUMMARY.txt  FEATURE_EXPANSION_SUMMARY.md  GUI_LOGIC_FIX.md  GUI_USER_MANUAL.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  QT_DEVELOPER_SETUP.md  QT_GUI_EXTENSIONS.md  QT_GUI_README.md  QT_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  run_gui.sh  test_gui.sh
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp  main.qml  resources.qrc
include/: account.h  bank.h  bank_bridge.h  cli.h  ibank.h  ipersistence.h  json_persistence.h
src/: CMakeLists.txt
src/bank/: CMakeLists.txt  account.cpp  bank.cpp  bank_bridge.cpp  json_persistence.cpp
src/cli/: CMakeLists.txt  cli.cpp
tests/: CMakeLists.txt  test_account.cpp  test_bank.cpp  test_persistence.cpp
